sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: type mismatch;
 found   : Unit
 required: Boolean
    echange(i, i + 1)
           ^AlgBubbleSort1:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (plusPetit(i + 1, i))
  ^